Exercícios HTML II - ex3

--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -10,16 +10,28 @@
 </head>
 
 <body>
-    <div class="a">
+    <header>
         <h1><a href="./index.html">Simulador de Climas</a></h1>
-    </div>
-    <div class="b">
-        <div class="c">
+    </header>
+    <main>
+        <section>
         <!-- Seu formukário aqui!-->
-        </div>
+        <form>
+            <label name="nome"><b>Nome: </b></label>
+            <input name="nome" type="text">
+            <br><br>
+            <label name="email"><b>E-mail: </b></label>
+            <input name="email" type="text">
+            <br><br>
+            <label name="sugestao"><b>Sugestão: </b></label>
+            <textarea></textarea>
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
+        </section>
 
-    </div>
-    <div class="e">Footer</div>
+    </main>
+    <footer>Footer</footer>
 
 </body>
 
